fixed z-index overlapping of dropdowns and whynot arrow

--- a/less/new.less
+++ b/less/new.less
@@ -759,7 +759,7 @@ body {
 
 .arrowImage {
     margin-bottom: 2px;
-    position:relative;
+    //position:relative;
     //top:-10px;
     z-index:10; // put arrows on top of other elements
     //width:82px; // correct size, but requires arrows to be placed in different spans to work
@@ -1100,10 +1100,7 @@ img.smallDisplay {
 	padding-left: 5px;
 }
 
-// for 
-.addthis {
-    z-index: 20;
-}
+
 
 a#editPoint {
 	float: right;
